[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1" # 高效处理网络buffer的库
prost = "0.11.3" # 处理 protobuf 的库
tracing = "0.1.37" # 日志处理

[dev-dependencies]
anyhow = "1.0.66"
async-prost = "0.4.0" # 支持把 protobuf 封装成 TCP frame
futures = "0.3.25" # 提供Stream trait
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tracing-subscriber = "0.3.16" # 日志处理

[build-dependencies]
prost-build = "0.11.3" # 编译 protobuf
